Register Validation modified

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -36,7 +36,7 @@
           <img src="../../assets/four.jpg" class="card-img-top d-flex mx-auto" alt="...">
           <div class="card-body">
             <h5 class="card-title">Dedeepya Yarlagadda</h5>
-            <p class="card-text">Planning a day efficinetly is very important for every individual to accomplish great heights , here we go our website “Foresight plan your day everyday” will help you to plan your day with Classes, Placements and competitive programming</p>
+            <p class="card-text">Planning a day efficiently is very important for every individual to accomplish great heights , here we go our website “Foresight plan your day everyday” will help you to plan your day with Classes, Placements and competitive programming</p>
           </div>
         </div>
       </div>
