Color based changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,10 +37,10 @@
     </button>
 </div>
 <div class="card text-center mt-5 mb-5 w-50">
-    <h5 class="card-header bg-info text-center justify-content-center">FORESIGHT PLAN YOUR DAY-EVERYDAY</h5>
+    <h5 class="card-header text-center justify-content-center" style="color: white; background-color: #428ffc;">FORESIGHT PLAN YOUR DAY-EVERYDAY</h5>
     <div class="card-body bg-light">
         <p class="card-text">Planning a day efficiently is very important for every individual to accomplish great heights , here we go our website “Foresight plan your day everyday” will help you to plan your day with Classes, Placements and competitive programming</p>
-        <a href="register" target="_self" class="btn btn-info">Register Yourself !</a>
+        <a href="register" target="_self" class="btn btn-info" style="color: white; background-color: #428ffc;">Register Yourself !</a>
     </div>
 </div>
 
