--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,6 @@
+<div class="head1">
 <section id="testimonials">
-    <h1 class="text-primary text-center heading">Let's hear from our Innovative Minds</h1>
+    <h1 class="text-center heading" style="color: #ffe9ef; font-family: Charmonman; padding-top:40px;font-weight: bolder;">Let's hear from our Innovative Minds</h1>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mt-5 mb-5 ">
       <div class="col">
         <div class="card h-100 shadow text-center">
@@ -40,10 +41,11 @@
           </div>
         </div>
       </div>
-      </div>
+    </div>
   </section>
-  
-  <section id="features">
+</div>
+<div class="head2">
+  <section id="features" style="padding-bottom: 70px;padding-top: 70px;">
       <div class="row">
         <div class="col-lg-4 feature-images">
           <i class="icon fas fa-check-circle fa-4x"></i>
@@ -62,55 +64,37 @@
         </div>
       </div>
   </section>
-  
-  
-  <!-- <section id="testimonials">
-      <div id="test-car" class="carousel slide" data-ride="false">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-            <h2>I no longer have to search many places to find Links. I've found the best Portal</h2>
-            <img class="testimonial-image" src="images/dog-img.jpg" alt="person-1">
-            <em>Advaith</em>
-            </div>
-            <div class="carousel-item">
-            <h2>I used to miss many Events those that don't have a remainder.</h2>
-            <img class="testimonial-image" src="images/lady-img.jpg" alt="person-2">
-            <em>Akshith</em>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#test-car" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#test-car" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-           </a>
-      </div> 
-  </section>
-   -->
-  
-  
+</div>
+<div class="head3">
   <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="1500">
-        <img src="../../assets/smart.PNG" class="d-block w-100" alt="ONE">
+        <img src="../../assets/1.PNG" class="d-block w-100" alt="ONE">
       </div>
       <div class="carousel-item" data-bs-interval="1500">
-        <img src="../../assets/comfy.PNG" class="d-block w-100" alt="TWOO">
+        <img src="../../assets/2.PNG" class="d-block w-100" alt="TWOO">
       </div>
       <div class="carousel-item" data-bs-interval="1500">
-        <img src="../../assets/flexy.PNG" class="d-block w-100" alt="THREEE">
+        <img src="../../assets/3.PNG" class="d-block w-100" alt="THREEE">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+    <button class="carousel-control-prev" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
-    </button>
+    </button> -->
   </div>
+</div>
+  
+
   
   
