--- a/src/app/add-codingprofiles/add-codingprofiles.component.html
+++ b/src/app/add-codingprofiles/add-codingprofiles.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-5">
+<div class="row mt-5" style="padding-bottom:100px;">
     <div class="col-sm-2 col-md-3"></div>
     <div class="col-sm-8 col-md-6">
       <form (ngSubmit)="onSubmitnewprofile()">
@@ -22,7 +22,7 @@
             [(ngModel)]="profileModel.Score">
           <label for="pd">Score</label>
         </div>
-        <button class="btn btn-warning float-end" type="submit">Add</button>
+        <button class="btn mx-auto d-block" style="background-color:#624a59;color:#ffe9ef;font-family: Charmonman;" type="submit">Add</button>
       </form>
     </div>
     <div class="col-sm-2 col-md-3"></div>
