--- a/src/app/codingprofiles/codingprofiles.component.html
+++ b/src/app/codingprofiles/codingprofiles.component.html
@@ -1,9 +1,9 @@
 <ul class="nav nav-tabs mt-3 justify-content-center">
     <li class="nav-item">
-      <a class="nav-link "  routerLink="viewcodingprofiles" routerLinkActive="active">View CodingProfiles</a>
+      <a class="nav-link "  routerLink="viewcodingprofiles" routerLinkActive="active" style="color:#624a59;font-size:25px;font-family: Niconne;">View CodingProfiles</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="addcodingprofiles" routerLinkActive="active">Add CodingProfiles</a>
+      <a class="nav-link" routerLink="addcodingprofiles" routerLinkActive="active" style="color:#624a59;font-size:25px;font-family: Niconne;">Add CodingProfiles</a>
     </li>
    
   </ul>
