--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,16 @@
-<ul class="nav nav-pills justify-content-evenly mt-3">
+<div style="background-color: #ffe9ef;;">
+<ul class="nav nav-pills justify-content-evenly ">
     <li class="nav-item">
-        <a class="nav-link" routerLink="onlineclasses" routerLinkActive="active">Online Classes</a>
+        <a class="nav-link item" routerLink="onlineclasses" routerLinkActive="active" >Online Classes</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" routerLink="coding" routerLinkActive="active">Coding</a>
+        <a class="nav-link item" routerLink="coding" routerLinkActive="active">Coding</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" routerLink="placements" routerLinkActive="active">Placements</a>
+        <a class="nav-link item" routerLink="placements" routerLinkActive="active">Placements</a>
     </li>
 </ul>
-<div class="container">
+<div class="container-fluid">
     <router-outlet></router-outlet>
+</div>
 </div>
