--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
-<div class="carousel slide mt-3 mb-3" data-bs-ride="carousel" id="crs">
+<!-- <div class="head" style="background-color: #FFDEFA; width:100%; height:auto"> -->
+<div id="header1" class="container-fluid" style="margin-bottom: 0;">
+<div class="carousel slide " data-bs-ride="carousel" id="crs" >
 
     <div class="carousel-indicators">
         <button data-bs-target="#crs" data-bs-slide-to="0" class="active"></button>
@@ -15,7 +17,7 @@
            </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-            <img src="https://www.inbrief.dev/api/category/image/competitive-programming" alt="" width="100%" height="612px">
+            <img src="../../assets/code.jpg" alt="..." width="100%" height="612px">
             <div class="carousel-caption">
                 <h2> </h2>
                 <p> </p>
@@ -36,21 +38,22 @@
       <span class="carousel-control-next-icon"></span>
     </button>
 </div>
-<div class="card text-center mt-5 mb-5 w-50">
-    <h5 class="card-header text-center justify-content-center" style="color: white; background-color: #428ffc;">FORESIGHT PLAN YOUR DAY-EVERYDAY</h5>
+</div>
+<section id="header2" class="container-fluid mt-0 mb-0" style="padding-bottom:100px;padding-top:100px;margin-top:0;">
+<div class="card text-center   w-50">
+    <h5 class="card-header text-center justify-content-center" style="color:  #ffe9ef; background-color:#624a59; font-family:Cairo;">FORESIGHT PLAN YOUR DAY-EVERYDAY</h5>
     <div class="card-body bg-light">
         <p class="card-text">Planning a day efficiently is very important for every individual to accomplish great heights , here we go our website “Foresight plan your day everyday” will help you to plan your day with Classes, Placements and competitive programming</p>
-        <a href="register" target="_self" class="btn btn-info" style="color: white; background-color: #428ffc;">Register Yourself !</a>
+        <button (click)="redirect()" class="btn btn-info" style="color:#ffe9ef; background-color:#624a59;font-family: Charmonman;">Register Yourself !</button>
     </div>
 </div>
-
-<section class="mb-4">
-
+</section>
+<section id="header3" class="container-fluid mt-0 mb-0" style="padding-bottom: 70px;padding-top:70px;">
     <div class="row">
-    <div class="card bg-light mt-4 w-75">
+    <div class="card bg-light  w-75">
         <div class="card-body">
-            <h2 class="card-title text-center text-primary"><b>Contact Us</b></h2>
-            <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+            <h2 class="card-title text-center " style="background-color:#624a59 ;color:#ffe9ef ;font-family:Cairo;margin-bottom:3px;">CONTACT US</h2>
+            <p class="text-center w-responsive mx-auto mb-3" style="padding-top: 5px;">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
                     a matter of hours to help you.</p>
                   
             <div class="col-md-12 mb-md-0 mb-5">
@@ -76,12 +79,11 @@
                 </form>
     
                 <div class="text-center text-md-left mt-4">
-                    <a class="btn btn-primary" onclick="submit"> Send </a>
+                    <a class="btn" style="background-color:#624a59 ;color:#ffe9ef;font-family: Charmonman ;" onclick="submit"> Send </a>
                 </div>
             </div>
         </div>
     </div>
     
 </div>
-
 </section>
