--- a/src/app/placements/placements.component.html
+++ b/src/app/placements/placements.component.html
@@ -1,9 +1,9 @@
 <ul class="nav nav-tabs mt-3 justify-content-center">
     <li class="nav-item">
-      <a class="nav-link "  routerLink="viewplacements" routerLinkActive="active">View Placements</a>
+      <a class="nav-link "  routerLink="viewplacements" routerLinkActive="active" style="color:#624a59;font-size:25px;font-family: Niconne;">View Placements</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="addplacements" routerLinkActive="active">Add Placements</a>
+      <a class="nav-link" routerLink="addplacements" routerLinkActive="active" style="color:#624a59;font-size:25px;font-family:Niconne;">Add Placements</a>
     </li>
    
   </ul>
