--- a/src/app/add-placements/add-placements.component.html
+++ b/src/app/add-placements/add-placements.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-5">
+<div class="row mt-5" style="padding-bottom:100px;">
     <div class="col-sm-2 col-md-3"></div>
     <div class="col-sm-8 col-md-6">
       <form (ngSubmit)="onSubmitnewplacement()">
@@ -20,9 +20,9 @@
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="pd" placeholder="Password" name="status"
             [(ngModel)]="placementModel.status">
-          <label for="pd">status</label>
+          <label for="pd">Status</label>
         </div>
-        <button class="btn btn-warning float-end" type="submit">Add</button>
+        <button class="btn mx-auto d-block"  style="background-color:#624a59;color:#ffe9ef;font-family:Charmonman;" type="submit">Add</button>
       </form>
     </div>
     <div class="col-sm-2 col-md-3"></div>
