--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<p class="display-4 text-center text-secondary m-5">Login here</p>
+<div class="log" style="padding-bottom:100px;">
+<p class="display-4 text-center " style="background-color:#624a59; color:blanchedalmond;margin-bottom: 5px; padding-bottom: 10px;font-family:Niconne; font-size: 45px;">Login here</p>
 <form #ref="ngForm" (ngSubmit)="onLogin(ref.value)" class="w-75 mx-auto mt-5">
     <div class="form-floating mb-3">
         <input type="username" class="form-control" id="username" placeholder="name@example.com" name="username" 
@@ -10,5 +11,7 @@
         <label for="password">Password</label>
     </div>
   
-    <button class="btn btn-success" type="submit">Login</button>
+    <button class="btn  d-block mx-auto m-4" style="background-color:#624a59; color:blanchedalmond;font-family:Charmonman;"type="submit">Login</button>
+    <div style="height:230px;background-color:#ffe9ef;"></div>
 </form>
+</div>
