--- a/src/app/view-codingprofiles/view-codingprofiles.component.html
+++ b/src/app/view-codingprofiles/view-codingprofiles.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="padding-bottom: 30px;">
     <input type="text" name="productTitle" placeholder="Search by Company Name" class="form-control mt-2" [(ngModel)]="searchTerm">
     <br>
     <div class="table-content">
@@ -48,7 +48,7 @@
                         </td>
                         <td>
                             <!-- <img src={{obj.itemLink}} alt="" width="100px">  -->
-                            <a class="btn btn-primary btn-style" role="button" href={{obj.Link}} target=_blank>Open</a>
+                            <a class="btn" style="background-color:#624a59; color:white" role="button" href={{obj.Link}} target=_blank>Open</a>
                             <!-- {{obj.itemLink}} -->
                         </td>
                         <!-- edit  and delete -->
